--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,9 @@
   text-decoration: none;
   font-weight: bold;
 }
+.nav__link:hover {
+  color: #1f69c9;
+}
 
 .header__title {
   max-width: 601px;
@@ -79,6 +82,10 @@
 .header__link {
   color: #2f80ed;
   text-decoration: none;
+}
+
+.header__link:hover {
+  color: #1f69c9;
 }
 
 .header__address {
@@ -154,6 +161,10 @@
 .events__more {
   color: #2f80ed;
   text-decoration: none;
+}
+
+.events__more:hover {
+  color: #1f69c9;
 }
 
 .events__cover {
@@ -396,17 +407,25 @@
 }
 
 .footer__columns {
+  display: flex;
+}
+
+.footer_column {
   font-size: 16px;
   line-height: 20px;
 }
 
 .footer__column_content_hours {
+  margin-left: auto;
 }
 
 .footer__column_content_social {
+  margin-left: 100px;
 }
 
 .footer__logo {
+  width: 57px;
+  height: 80px;
 }
 
 .footer__list {
@@ -417,9 +436,15 @@
 }
 
 .footer__list-item {
+  margin-bottom: 16px;
+}
+
+.footer__llist-item:last-of-type {
+  margin-bottom: 0;
 }
 
 .footer__column-heading {
+  margin-bottom: 20px;
 }
 
 .footer__column-link {
@@ -427,10 +452,16 @@
   font-size: 16px;
   line-height: 20px;
   text-decoration: none;
+  display: flex;
+  align-items: center;
 }
 
 .footer__social-icon {
+  height: 16px;
+  width: 16px;
+  margin-right: 10px;
 }
 
 .footer__copyright {
+  margin-top: 108px;
 }
