--- a/styles/style.css
+++ b/styles/style.css
@@ -258,7 +258,7 @@
   color: #fff;
 }
 
-.staff__content {
+.staff__cards {
   max-width: 760px;
   margin: 68px auto 0;
   align-items: center;
@@ -454,6 +454,10 @@
   text-decoration: none;
   display: flex;
   align-items: center;
+}
+
+.footer__column-link:hover {
+  color: #1f69c9;
 }
 
 .footer__social-icon {
